syntax = "proto3";
option java_multiple_files = true;
package ds.tutorial.communication.grpc.generated;

message CheckQuantityRequest {
    string itemId = 1;
}

message CheckQuantityResponse {
    double quantity = 1;
}

message SetQuantityRequest {
    string itemId = 1;
    double quantity = 2;
    bool isSentByPrimary = 3;
}

message SetQuantityResponse {
    bool status = 1;
}

service CheckQuantityService {
    rpc checkQuantity(CheckQuantityRequest) returns (CheckQuantityResponse);
}

service SetQuantityService {
    rpc setQuantity(SetQuantityRequest) returns (SetQuantityResponse);
}